src/grammar/MiniRustParser.py
# Generated from E:/PPL BTL/minirust-assignment-2453063/src/grammar/MiniRust.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniRustParser ( Parser ):

    grammarFileName = "MiniRust.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'fn'", "'let'", "'mut'", "'struct'", 
                     "'if'", "'else'", "'while'", "'for'", "'in'", "'break'", 
                     "'continue'", "'switch'", "'case'", "'default'", "'return'", 
                     "'i32'", "'f32'", "'bool'", "'void'", "'string'", "'true'", 
                     "'false'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "','", "':'", "'..'", "'.'", "'%'", "'->'", 
                     "'+'", "'-'", "'*'", "'/'", "'=='", "'!='", "'<='", 
                     "'>='", "'<'", "'>'", "'&&'", "'||'", "'!'", "'='" ]

    symbolicNames = [ "<INVALID>", "FN", "LET", "MUT", "STRUCT", "IF", "ELSE", 
                      "WHILE", "FOR", "IN", "BREAK", "CONTINUE", "SWITCH", 
                      "CASE", "DEFAULT", "RETURN", "I32", "F32", "BOOL", 
                      "VOID", "STRING", "TRUE", "FALSE", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", 
                      "COLON", "DOTDOT", "DOT", "MOD", "ARROW", "ADD", "SUB", 
                      "MUL", "DIV", "EQ", "NEQ", "LTE", "GTE", "LT", "GT", 
                      "AND", "OR", "NOT", "ASSIGN", "FLOAT_LIT", "INT_LIT", 
                      "ID", "WS", "COMMENT", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "STRING_LITERAL", 
                      "ERROR_TOKEN" ]

    RULE_program = 0
    RULE_typeExpr = 1
    RULE_arrayLiteral = 2
    RULE_array_list = 3
    RULE_arrayType = 4
    RULE_funcDecl = 5
    RULE_paramList = 6
    RULE_paramListPrime = 7
    RULE_param = 8
    RULE_block = 9
    RULE_statementList = 10
    RULE_statement = 11
    RULE_callExpr = 12
    RULE_expr = 13
    RULE_assign_expr = 14
    RULE_or_expr = 15
    RULE_and_expr = 16
    RULE_eq_expr = 17
    RULE_rel_expr = 18
    RULE_add_expr = 19
    RULE_mul_expr = 20
    RULE_una_expr = 21
    RULE_primary_expr = 22
    RULE_argList = 23
    RULE_argListprime = 24
    RULE_struct_expr = 25
    RULE_fieldDeclList = 26
    RULE_fieldDec = 27
    RULE_structLiteral = 28
    RULE_initializerList = 29
    RULE_initializerDec = 30
    RULE_vardecl = 31
    RULE_ifStmt = 32
    RULE_elsePart = 33
    RULE_switchStmt = 34
    RULE_switchBody = 35
    RULE_switchClause = 36
    RULE_caseClause = 37
    RULE_defaultClause = 38
    RULE_literal = 39
    RULE_whileStmt = 40
    RULE_forStmt = 41
    RULE_breakStmt = 42
    RULE_continueStmt = 43
    RULE_returnStmt = 44

    ruleNames =  [ "program", "typeExpr", "arrayLiteral", "array_list", 
                   "arrayType", "funcDecl", "paramList", "paramListPrime", 
                   "param", "block", "statementList", "statement", "callExpr", 
                   "expr", "assign_expr", "or_expr", "and_expr", "eq_expr", 
                   "rel_expr", "add_expr", "mul_expr", "una_expr", "primary_expr", 
                   "argList", "argListprime", "struct_expr", "fieldDeclList", 
                   "fieldDec", "structLiteral", "initializerList", "initializerDec", 
                   "vardecl", "ifStmt", "elsePart", "switchStmt", "switchBody", 
                   "switchClause", "caseClause", "defaultClause", "literal", 
                   "whileStmt", "forStmt", "breakStmt", "continueStmt", 
                   "returnStmt" ]

    EOF = Token.EOF
    FN=1
    LET=2
    MUT=3
    STRUCT=4
    IF=5
    ELSE=6
    WHILE=7
    FOR=8
    IN=9
    BREAK=10
    CONTINUE=11
    SWITCH=12
    CASE=13
    DEFAULT=14
    RETURN=15
    I32=16
    F32=17
    BOOL=18
    VOID=19
    STRING=20
    TRUE=21
    FALSE=22
    LPAREN=23
    RPAREN=24
    LBRACE=25
    RBRACE=26
    LBRACK=27
    RBRACK=28
    SEMI=29
    COMMA=30
    COLON=31
    DOTDOT=32
    DOT=33
    MOD=34
    ARROW=35
    ADD=36
    SUB=37
    MUL=38
    DIV=39
    EQ=40
    NEQ=41
    LTE=42
    GTE=43
    LT=44
    GT=45
    AND=46
    OR=47
    NOT=48
    ASSIGN=49
    FLOAT_LIT=50
    INT_LIT=51
    ID=52
    WS=53
    COMMENT=54
    LINE_COMMENT=55
    BLOCK_COMMENT=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58
    STRING_LITERAL=59
    ERROR_TOKEN=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniRustParser.EOF, 0)

        def struct_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRustParser.Struct_exprContext)
            else:
                return self.getTypedRuleContext(MiniRustParser.Struct_exprContext,i)


        def funcDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniRustParser.FuncDeclContext)
            else:
                return self.getTypedRuleContext(MiniRustParser.FuncDeclContext,i)


        def getRuleIndex(self):
            return MiniRustParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniRustParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 90
                self.struct_expr()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 96
                self.funcDecl()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(MiniRustParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def I32(self):
            return self.getToken(MiniRustParser.I32, 0)

        def F32(self):
            return self.getToken(MiniRustParser.F32, 0)

        def BOOL(self):
            return self.getToken(MiniRustParser.BOOL, 0)

        def STRING(self):
            return self.getToken(MiniRustParser.STRING, 0)

        def VOID(self):
            return self.getToken(MiniRustParser.VOID, 0)

        def ID(self):
            return self.getToken(MiniRustParser.ID, 0)

        def arrayType(self):
            return self.getTypedRuleContext(MiniRustParser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return MiniRustParser.RULE_typeExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeExpr" ):
                listener.enterTypeExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeExpr" ):
                listener.exitTypeExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeExpr" ):
                return visitor.visitTypeExpr(self)
            else:
                return visitor.visitChildren(self)




    def typeExpr(self):

        localctx = MiniRustParser.TypeExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_typeExpr)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(MiniRustParser.I32)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(MiniRustParser.F32)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.match(MiniRustParser.BOOL)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.match(MiniRustParser.STRING)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 5)
                self.state = 108
                self.match(MiniRustParser.VOID)
                pass
            elif token in [52]:
                self.enterOuterAlt(localctx, 6)
                self.state = 109
                self.match(MiniRustParser.ID)
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 7)
                self.state = 110
                self.arrayType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(MiniRustParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(MiniRustParser.RBRACK, 0)

        def array_list(self):
            return self.getTypedRuleContext(MiniRustParser.Array_listContext,0)


        def getRuleIndex(self):
            return MiniRustParser.RULE_arrayLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayLiteral" ):
                listener.enterArrayLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayLiteral" ):
                listener.exitArrayLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayLiteral" ):
                return visitor.visitArrayLiteral(self)
            else:
                return visitor.visitChildren(self)




    def arrayLiteral(self):

        localctx = MiniRustParser.ArrayLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_arrayLiteral)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(MiniRustParser.LBRACK)
                self.state = 114
                self.match(MiniRustParser.RBRACK)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(MiniRustParser.LBRACK)
                self.state = 116
                self.array_list()
                self.state = 117
                self.match(MiniRustParser.RBRACK)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniRustParser.ExprContext,0)


        def COMMA(self):
            return self.getToken(MiniRustParser.COMMA, 0)

        def array_list(self):
            return self.getTypedRuleContext(MiniRustParser.Array_listContext,0)


        def getRuleIndex(self):
            return MiniRustParser.RULE_array_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_list" ):
                listener.enterArray_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_list" ):
                listener.exitArray_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_list" ):
                return visitor.visitArray_list(self)
            else:
                return visitor.visitChildren(self)




    def array_list(self):

        localctx = MiniRustParser.Array_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_array_list)
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.expr()
                self.state = 122
                self.match(MiniRustParser.COMMA)
                self.state = 123
                self.array_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(MiniRustParser.LBRACK, 0)

        def typeExpr(self):
            return self.getTypedRuleContext(MiniRustParser.TypeExprContext,0)


        def SEMI(self):
            return self.getToken(MiniRustParser.SEMI, 0)

        def INT_LIT(self):
            return self.getToken(MiniRustParser.INT_LIT, 0)

        def RBRACK(self):
            return self.getToken(MiniRustParser.RBRACK, 0)

        def getRuleIndex(self):
            return MiniRustParser.RULE_arrayType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayType" ):
                listener.enterArrayType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayType" ):
                listener.exitArrayType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayType" ):
                return visitor.visitArrayType(self)
            else:
                return visitor.visitChildren(self)




    def arrayType(self):

        localctx = MiniRustParser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arrayType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(MiniRustParser.LBRACK)
            self.state = 129
            self.typeExpr()
            self.state = 130
            self.match(MiniRustParser.SEMI)
            self.state = 131
            self.match(MiniRustParser.INT_LIT)
            self.state = 132
            self.match(MiniRustParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FN(self):
            return self.getToken(MiniRustParser.FN, 0)

        def ID(self):
            return self.getToken(MiniRustParser.ID, 0)

        def LPAREN(self):
            return self.getToken(MiniRustParser.LPAREN, 0)

        def paramList(self):
            return self.getTypedRuleContext(MiniRustParser.ParamListContext,0)


        def RPAREN(self):
            return self.getToken(MiniRustParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(MiniRustParser.BlockContext,0)


        def ARROW(self):
            return self.getToken(MiniRustParser.ARROW, 0)

        def typeExpr(self):
            return self.getTypedRuleContext(MiniRustParser.TypeExprContext,0)


        def getRuleIndex(self):
            return MiniRustParser.RULE_funcDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = MiniRustParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(MiniRustParser.FN)
            self.state = 135
            self.match(MiniRustParser.ID)
            self.state = 136
            self.match(MiniRustParser.LPAREN)
            self.state = 137
            self.paramList()
            self.state = 138
            self.match(MiniRustParser.RPAREN)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 139
                self.match(MiniRustParser.ARROW)
                self.state = 140
                self.typeExpr()


            self.state = 143
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramListPrime(self):
            return self.getTypedRuleContext(MiniRustParser.ParamListPrimeContext,0)


        def getRuleIndex(self):
            return MiniRustParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = MiniRustParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramList)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [52]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.paramListPrime()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MiniRustParser.ParamContext,0)


        def COMMA(self):
            return self.getToken(MiniRustParser.COMMA, 0)

        def paramListPrime(self):
            return self.getTypedRuleContext(MiniRustParser.ParamListPrimeContext,0)


        def getRuleIndex(self):
            return MiniRustParser.RULE_paramListPrime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamListPrime" ):
                listener.enterParamListPrime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamListPrime" ):
                listener.exitParamListPrime(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamListPrime" ):
                return visitor.visitParamListPrime(self)
            else:
                return visitor.visitChildren(self)




    def paramListPrime(self):

        localctx = MiniRustParser.ParamListPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramListPrime)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.param()
                self.state = 150
                self.match(MiniRustParser.COMMA)
                self.state = 151
                self.paramListPrime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniRustParser.ID, 0)

        def COLON(self):
            return self.getToken(MiniRustParser.COLON, 0)

        def typeExpr(self):
            return self.getTypedRuleContext(MiniRustParser.TypeExprContext,0)


        def getRuleIndex(self):
            return MiniRustParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MiniRustParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(MiniRustParser.ID)
            self.state = 157
            self.match(MiniRustParser.COLON)
            self.state = 158
            self.typeExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(MiniRustParser.LBRACE, 0)

        def statementList(self):
            return self.getTypedRuleContext(MiniRustParser.StatementListContext,0)


        def RBRACE(self):
            return self.getToken(MiniRustParser.RBRACE, 0)

        def getRuleIndex(self):
            return MiniRustParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MiniRustParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(MiniRustParser.LBRACE)
            self.state = 161
            self.statementList()
            self.state = 162
            self.match(MiniRustParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(MiniRustParser.StatementContext,0)


        def statementList(self):
            return self.getTypedRuleContext(MiniRustParser.StatementListContext,0)


        def getRuleIndex(self):
            return MiniRustParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self)
            else:
                return visitor.visitChildren(self)




    def statementList(self):

        localctx = MiniRustParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statementList)
        try:
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 5, 7, 8, 10, 11, 12, 15, 21, 22, 23, 25, 27, 37, 48, 50, 51, 52, 59]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.statement()
                self.state = 165
                self.statementList()
                pass
            elif token in [-1, 13, 14, 26]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
